[gd_scene load_steps=9 format=2]

[ext_resource path="res://entity/projectile/missile_ammo/missile_ammo.gd" type="Script" id=1]
[ext_resource path="res://entity/projectile/missile_ammo/missile.obj" type="ArrayMesh" id=2]
[ext_resource path="res://addons/explosion/quick_explosion.tscn" type="PackedScene" id=3]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.407843, 0.407843, 0.407843, 1 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.87451, 0.87451, 0.87451, 1 )

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="SphereMesh" id=6]
material = SubResource( 3 )
radius = 0.2
height = 0.4

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0.0041841, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.163636 ), -1.35795, 0.0, 0, 0 ]

[node name="missile_ammo" type="Spatial"]
script = ExtResource( 1 )

[node name="body" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="body"]
mesh = ExtResource( 2 )
skeleton = NodePath("../..")
software_skinning_transform_normals = false
material/0 = SubResource( 1 )
material/1 = SubResource( 2 )

[node name="fire" type="CPUParticles" parent="body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00749691, 0.46952 )
amount = 4
lifetime = 0.4
randomness = 0.1
lifetime_randomness = 0.2
mesh = SubResource( 6 )
direction = Vector3( 0, 0, 2 )
spread = 0.0
gravity = Vector3( 0, 0, 12 )
initial_velocity = 1.0
scale_amount_curve = SubResource( 5 )
color = Color( 1, 0.360784, 0, 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="Explosion1" parent="." instance=ExtResource( 3 )]

[node name="explosion_timeout" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
bus = "Sfx"

[connection signal="timeout" from="explosion_timeout" to="." method="_on_explosion_timeout_timeout"]
